# PrevisaoConversaoVendas

./: .gitignore  README.md  pyproject.toml
Notebooks/: AnaliseDeConversao.ipynb  Experiments.ipynb  Implentação.ipynb  Teste.ipynb
Notebooks/.ipynb_checkpoints/: Experiments-checkpoint.ipynb
